# Speller

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: BinTreeChecker.h  Checker.h  HashTableChecker.h  StdUnorderedSetChecker.h  bintree.h  stdvectorChecker.h
sources/: BinTreeChecker.cpp  Checker.cpp  HashTableChecker.cpp  StdUnorderedSetChecker.cpp  bintree.cpp  stdvectorChecker.cpp
